# MIPS-Simulator

./: CMakeLists.txt  Coordinator.h  Global.cpp  Global.h  InsMem.h  Instruction.h  MemoryHW.h  Parser.h  Processors.h  Scanner.h  Simulator.h  Specialists.cpp  Utility.h  code  enumT.h  main.cpp  makefile
BruteForce/: Parser.h  Processors.h  Simulator.h  Utility.h  code  codeb
WithComment/: Specialists.cpp  Utility.h  code
Without Prediction/: README.md  Specialists.cpp  Utility.h  array_test1-mahaojun.s  code  log  main.cpp
before final backup/: Instruction.h
finalSnapShot/: Coordinator.h  Specialists.cpp  Utility.h  decode  makefile
header/operators/: base.h  specialists.h
header/parse/: parser.h  scanner.h
header/simulator/: coordinator.h  processor.h  simulator.h
header/utility/: common.h  memory.h  utility.h
prediction/: Coordinator.h  Global.cpp  README.md  code  main.cpp
src/operators/: base.cpp  specialists.cpp
src/parse/: parser.cpp  scanner.cpp
src/simulator/: coordinator.cpp  processor.cpp  simulator.cpp
src/utility/: common.cpp  memory.cpp  utility.cpp
